# playbooks

./: README.md
ai-agent/python-langchain/: agent.py  requirements.txt  server.py
ai-agent/python-langchain/static/: app.js
langchain/python-fastapi/: .env.example  README.md  run.sh
langchain/python-fastapi/static/: index.html  styles.css
self-hosted-audio-echo/node/: .env.example  README.md  package.json  server.ts
self-hosted-audio-echo/python/: .env.example  README.md  pyproject.toml  requirements.txt  run.sh  server.py
self-hosted/openai-node/: README.md  package-lock.json  package.json  server.mjs  server.ts
self-hosted/openai-python/: .env.example  README.md  pyproject.toml  requirements.txt  run.sh  server.py
sms-and-voice/node-express/: .env.example  README.md  config.ts  dial-service.ts  package-lock.json  package.json  server.ts  tsconfig.json
sms-and-voice/node-express/public/: app.js  index.html  style.css
sms-and-voice/python-fastapi/: .env.example  README.md  app.py  config.py  dial_service.py  pyproject.toml
sms-and-voice/python-fastapi/static/: app.js
sms-and-voice/python-fastapi/templates/: index.html
