[project]
name = "dial-self-hosted-audio-echo-python"
version = "0.1.0"
description = "Stupid-simple Dial Self-Hosted AUDIO server: echoes the caller's audio back, on dial-sdk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dial-sdk>=0.17.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["server"]
